--- a/app/index.html
+++ b/app/index.html
@@ -33,47 +33,6 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     <div id="app"></div>
-    <div class="container">
-      <div class="row marketing">
-        <div> <h1> U.S. Household Income by National Origin</h1></div>
-        <div id="filter-regions" class="col-md-6"></div>
-
-<!--         <div class="col-md-6 world-chart-col">
-          <label> Continents</label>
-          <select class="form-control">
-            <option>Europe</option>
-            <option>Africa</option>
-          </select>
-          <label> Subregion</label>
-          <select class="form-control">
-            <option> None </option>
-            <option>Western Europe</option>
-            <option>Eastern Europe</option>
-          </select>
-          <label>Countries</label>
-          <select class="form-control countries-select">
-            <option value="IT">Italy</option>
-            <option value="HR">Croatia</option>
-            <option value="BY">Belarus</option>
-            <option value="RU">Russia</option>
-          </select>
-
-          <div id="world-map" class="col-md-6 map">
-          </div>
-        </div>
- -->        
-
-        <div id="region-chart" class="col-md-6">
-          <h1> Italian American Household Income</h1>
-          <p> Average: $50,000 </p>
-          <div class="ct-chart ct-perfect-fourth"></div>
-        </div> 
-      </div>
-
-      <div class="footer">
-        <p>♥ from the Yeoman team</p>
-      </div>
-    </div>
     
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
@@ -112,6 +71,8 @@
     <script src="/bower_components/bower-jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
     <script src="/bower_components/bower-jvectormap/jquery-jvectormap-world-mill-en.js"></script>
     <script src="bower_components/chartist/dist/chartist.min.js"></script>
+    <script src="bower_components/accounting.js/accounting.min.js"></script>
+
 
 
     
