Adding webpack - wip

--- a/app/index.html
+++ b/app/index.html
@@ -76,6 +76,7 @@
 
 
     
+    <script src="scripts/bundle.js"></script>
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
