--- a/app/index.html
+++ b/app/index.html
@@ -50,6 +50,11 @@
     <script src="/bower_components/chartist/dist/chartist.min.js"></script>
     <script src="/bower_components/react/react.js"></script>
     <script src="/bower_components/react/react-dom.js"></script>
+    <script src="/bower_components/classnames/index.js"></script>
+    <script src="/bower_components/classnames/bind.js"></script>
+    <script src="/bower_components/classnames/dedupe.js"></script>
+    <script src="/bower_components/react-input-autosize/dist/react-input-autosize.min.js"></script>
+    <script src="/bower_components/react-select/dist/react-select.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
