Now using react-select

--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,9 @@
 
     <!-- endbuild -->
 
+    <link rel="stylesheet" href="styles/react-select.css">
+
+
     <link rel="stylesheet" href="/bower_components/bower-jvectormap/jquery-jvectormap-1.2.2.css">
     <link rel="stylesheet"
           href="bower_components/chartist/dist/chartist.min.css">
