Calculating and displaying regional and subregional income averages on bar chart

--- a/app/index.html
+++ b/app/index.html
@@ -58,6 +58,7 @@
     <script src="/bower_components/classnames/dedupe.js"></script>
     <script src="/bower_components/react-input-autosize/dist/react-input-autosize.min.js"></script>
     <script src="/bower_components/react-select/dist/react-select.min.js"></script>
+    <script src="/bower_components/underscore/underscore.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
